<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Amaze File Manager</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="books">Bookmarks</string>
    <string name="icon">icon</string>
    <string name="efn">Enter File Name</string>
    <string name="storage">Storage</string>
    <string name="gallery">Gallery</string>
    <string name="apps">App Manager</string>
    <string name="bookmanag">Bookmarks Manager</string>
    <string name="setting">Settings</string>
    <string name="select">Select Item</string>
    <string name="pressagain">Press  again to exit</string>
    <string name="open">Open</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="play">Play store</string>
    <string name="properties">Properties</string>
    <string name="copyingapk">Copying apk to </string>
    <string name="addbook">Add Bookmark</string>
    <string name="addtobook">Add to Bookmark</string>
    <string name="enterpath">Enter Path</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="success">Success</string>
    <string name="filenotexists">File Not Exists</string>
    <string name="error">Error</string>
    <string name="cantlistfiles">Can\'t list files without root</string>
    <string name="searchresults">Search Results</string>
    <string name="itemsselected">Items Selected</string>
    <string name="newhomedirectory">New Home Directory</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="renameerror">Rename Unsuccessful</string>
    <string name="renamed">Rename Successful</string>
    <string name="bookmarksadded">Bookmarks Added</string>
    <string name="fileexist">File with same name already exists </string>
    <string name="filecreated">File Created</string>
    <string name="searchpath">Search Path</string>
    <string name="search">SEARCH</string>
    <string name="enterfile">Enter File Name</string>
    <string name="name">Name: </string>
    <string name="date">Date: </string>
    <string name="location">Located in: </string>
    <string name="size">Size: </string>
    <string name="totalitems">Total Items: </string>
    <string name="enterzipname">Enter Zip Name</string>
    <string name="noappfound">No App found to open this file</string>
    <string name="copying">Copying</string>
    <string name="moving">Moving</string>
    <string name="add">Add</string>
    <string name="tab">Tab</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="newfolder">New Folder</string>
    <string name="entername">Enter Name</string>
    <string name="extracting">Extracting</string>
    <string name="zipping">Zipping</string>
    <string name="stopping">Stopping</string>
    <string name="guide1">Welcome to Amaze File Manager</string>
    <string name="guide2">Touch the blue strip to show or hide PathBar</string>
    <string name="guide3">Touch and hold any file for more options...</string>
    <string name="guide4">Like copy,move,properties etc</string>
    <string name="guide5">Use Back Button of your device to exit app anytime...</string>
    <string name="guide6">..And use left arrow button for navigation in file manager</string>
    <string name="maintab">Main Tab can\'t be removed</string>
    <string name="openparent">Open Parent Directory</string>
    <string name="openwith">Open with</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="extract">Extract</string>
    <string name="compress">Compress</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="deleting">Deleting</string>
    <string name="questiondelete">Do you really want to delete following files?</string>
    <string name="viewmode">View Mode</string>
    <string name="uimode">UI Mode</string>
    <string name="directorysort">Directory Sort Mode</string>
    <string name="sortby">Sort By</string>
    <string name="theme">Theme</string>
    <string name="skin">Skin</string>
    <string name="random">Random Skin</string>
    <string name="random_summary">Sets random theme at startup</string>
    <string name="colorize">Colorize Icons</string>
    <string name="colorize_summary">Sets static icon color</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="paste">Paste</string>
    <string name="close">Close</string>
    <string name="history">History</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="rootmode">Root Explorer</string>
    <string name="rootmodesummary">For rooted device only. Check it only if you are sure about it.</string>
    <string name="mountsystemsummary">Enable this if you want to edit System Files</string>
    <string name="mountsystem">Mount System Folders as Writable</string>
    <string name="rootfailure">Root Access not granted</string>
    <string name="cut">Cut</string>
    <string name="selectall">Select All</string>
    <string name="delete">Delete</string>
    <string name="setashome"> Set As Home Folder</string>
    <string name="sethome">Set Home Directory</string>
    <string name="foldercolor">Folder Color</string>
    <string name="imagegallery">Image Gallery</string>
    <string name="fileexplorer">File Explorer</string>
    <string name="changegallerypath">Change Gallery Path</string>
    <string name="usedefaultgallerypath">Use Default Image Gallery Path</string>
    <string name="changelog_version_1">&lt;font color="#524ef8">&lt;b>v1.0&lt;/font>&lt;/b>&lt;i>&lt;font color="#5299f2">&lt;br>Nov 11, 2014&lt;/i>&lt;/font>&lt;br></string>
    <string name="changelog_change_1">- Initial release&lt;br>&lt;br></string>
    <string name="changelog_version_2">&lt;font color="#524ef8">&lt;b>v1.1&lt;/font>&lt;/b>&lt;i>&lt;font color="#5299f2">&lt;br>Dec 04, 2014&lt;/i>&lt;/font>&lt;br></string>
    <string name="changelog_change_2">- Fixed cut/paste&lt;br>
                                      - Fixed text editor for root&lt;br>
                                      - Added German, French, Italian, Russian and Chinese languages&lt;br>
                                      - Added bookmarks to navigation drawer&lt;br>
                                      - Added material dialogs&lt;br>
                                      - more...&lt;br>&lt;br></string>
    <string name="changelog_version_3">&lt;font color="#524ef8">&lt;b>v1.3&lt;/font>&lt;/b>&lt;i>&lt;font color="#5299f2">&lt;br>Dec 13, 2014&lt;/i>&lt;/font>&lt;br></string>
    <string name="changelog_change_3">- Added Spanish&lt;br>
                                      - Various Zip Viewer fixes&lt;br>
                                      - Can view apk and jar files&lt;br>
                                      - Various text editor fixes&lt;br>
                                      - more...&lt;br>&lt;br></string>
    <string name="changelog_version_4">&lt;font color="#524ef8">&lt;b>v1.4&lt;/font>&lt;/b>&lt;i>&lt;font color="#5299f2">&lt;br>Jan 17, 2015&lt;/i>&lt;/font>&lt;br></string>
    <string name="changelog_change_4">    - Swipable tabs&lt;br>
                                      - Fully revamped UI&lt;br>
                                      - Speedy copy/paste/extract/compress operations&lt;br>
                                      - Progress of operations in notifications&lt;br>
                                      - Fixes for zip viewer and text editor&lt;br>
                                      - Ability to uninstall system apps&lt;br>
                                      - Improved searching of files&lt;br>
                                      - Serbian,basque translations&lt;br>
                                      - Added preference to disable go back list header&lt;br>
                                      - Added preference to disable circular thumbnails&lt;br>
                                      - Added preference to choose archive extract and compress directory&lt;br>
                                      - Added preference to remember paths&lt;br>
                                      - more...&lt;br>&lt;br></string>
    <string name="simple">Simple UI</string>
    <string name="card">Card UI</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="daytime">Daytime</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep Purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">Light Green</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="brown">Brown</string>
    <string name="black">Black</string>
    <string name="blue_grey">Blue Grey</string>
    <string name="supersu">SuperSU</string>
    <string name="foldersOnTop">Folders On Top</string>
    <string name="filesOnTop">Files On Top</string>
    <string name="noneOnTop">None On Top</string>
    <string name="sortName">Name</string>
    <string name="lastModified">Last Modified</string>
    <string name="sortSize">Size</string>
    <string name="sortNameDesc">Name (Desc)</string>
    <string name="lastModifiedDesc">Last Modified (Desc)</string>
    <string name="sortSizeDesc">Size (Desc)</string>
    <string name="detailedView">Detailed View</string>
    <string name="simpleView">Simple View</string>
    <string name="Yellow">Yellow</string>
    <string name="pick_a_file">Pick a file</string>
    <string name="process_viewer">Process Viewer</string>
    <string name="in_safe">Insufficient space</string>
    <string name="no_file_overwrite">No File Overwritten</string>
    <string name="skip">Skip</string>
    <string name="overwrite">Overwrite</string>
    <string name="cant_read_file">Can\'t read file</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="processes">Processes</string>
    <string name="searching">Searching</string>
    <string name="copying_fles">Copying Files</string>
    <string name="done">Done</string>
    <string name="Extracting_fles">Extracting Files</string>
    <string name="Zipping_fles">Zipping Files</string>
    <string name="items">Items</string>
    <string name="set">Set</string>
    <string name="enablerootmde">Enable Root Mode</string>
    <string name="goback">Go Back</string>
    <string name="foldercreated">Folder Created</string>
    <string name="newfile">New File</string>
    <string name="nofiles">No Files</string>
    <string name="tapnhold">Tap and hold on a File or Folder for more options</string>
    <string name="pathcopied">Path copied to clipboard</string>
    <string name="used">Used :  </string>
    <string name="free">Free :  </string>
    <string name="atroot">You are at the root</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="setlistview">Setting ListView</string>
    <string name="setgridview">Setting GridView</string>
    <string name="permission">Permissions</string>
    <string name="hide">Hide</string>
    <string name="exit">Exit</string>
    <string name="enternewname">Enter new name</string>
    <string name="doforall">Do for all items</string>
    <string name="gridcolumnno">Number of columns in grid view</string>
</resources>