<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="theme" android:entries="@array/theme" android:title="@string/theme" android:defaultValue="0" android:entryValues="@array/ints"  />

    <PreferenceCategory android:title="File Explorer">
	
		<ListPreference android:key="viewmode" android:entries="@array/listmode" android:title="@string/viewmode" android:entryValues="@array/ints" android:defaultValue="0" android:summary="Choose ListView Mode" />
		<ListPreference android:key="uimode" android:entries="@array/uimode" android:title="@string/uimode" android:entryValues="@array/ints" android:defaultValue="0" android:summary="Choose Item Ui" />
	<ListPreference android:key="dirontop" android:entries="@array/directorysortmode" android:title="@string/directorysort" android:defaultValue="0" android:entryValues="@array/ints1"  />

	
		
		<ListPreference android:key="sortby" android:entries="@array/sortby" android:title="@string/sortby" android:defaultValue="0" android:entryValues="@array/ints2"  />
		<ListPreference android:key="folder" android:entries="@array/folder" android:title="@string/foldercolor" android:defaultValue="1" android:entryValues="@array/ints1"  />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/imagegallery">
	
	<EditTextPreference android:key="Ipath" android:title="@string/changegallerypath" />
    
	<CheckBoxPreference android:key="Ipathset" android:title="@string/usedefaultgallerypath" android:defaultValue="true"/>
		
	</PreferenceCategory>

</PreferenceScreen>
