<!--
    Copyright (C) 2014 Arpit Khurana <arpitkh96@gmail.com>, Vishal Nehra <vishalmeham2@gmail.com>

    This file is part of Amaze File Manager.

    Amaze File Manager is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item3"
        android:title="Exit"
        android:icon="@drawable/ic_action_cancel_light"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/item4"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search_light"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/item9"
        android:title="@string/sethome" />
    <item
        android:id="@+id/item10"
        android:title="@string/sortby"/>
    <item
        android:id="@+id/item11"
        android:title="@string/directorysort" />
    <item
        android:id="@+id/view" />

</menu>
